--- a/androidtools/build.gradle
+++ b/androidtools/build.gradle
@@ -40,9 +40,9 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
 
-                groupId = 'com.trisnasejati'
+                groupId = 'com.github.trisnawan'
                 artifactId = 'androidtools'
-                version = '1.0.0'
+                version = '1.1.0'
             }
         }
     }
